--- a/python-flask-apps/template.yaml
+++ b/python-flask-apps/template.yaml
@@ -12,7 +12,7 @@ spec:
 
   # these are the steps which are rendered in the frontend with the form input
   parameters:
-    - title: Fill in some steps
+    - title: Fill in some parameters
       required:
         - component_name
         - environment
@@ -34,17 +34,17 @@ spec:
           type: string
           description: subpath to expose the service (/api/v1/{subpath})
 
-    - title: Choose a location
-      required:
-        - repoUrl
-      properties:
-        repoUrl:
-          title: Repository Location
-          type: string
-          ui:field: RepoUrlPicker
-          ui:options:
-            allowedHosts:
-              - github.com
+#    - title: Choose a location
+#      required:
+#        - repoUrl
+#      properties:
+#        repoUrl:
+#          title: Repository Location
+#          type: string
+#          ui:field: RepoUrlPicker
+#          ui:options:
+#            allowedHosts:
+#              - github.com
 
   # here's the steps that are executed in series in the scaffolder backend
   steps:
@@ -54,23 +54,25 @@ spec:
       input:
         url: ./template
         values:
-          name: ${{ parameters.name }}
-          owner: ${{ parameters.owner }}
+          component_name: ${{ parameters.component_name }}
+          environment: ${{ parameters.environment }}
+          api_path: ${{ parameters.api_path }}
 
-    - id: fetchDocs
-      name: Fetch Docs
-      action: fetch:plain
-      input:
-        targetPath: ./community
-        url: https://github.com/backstage/community/tree/main/backstage-community-sessions
+#    - id: fetchDocs
+#      name: Fetch Docs
+#      action: fetch:plain
+#      input:
+#        targetPath: ./community
+#        url: https://github.com/backstage/community/tree/main/backstage-community-sessions
 
     - id: publish
       name: Publish
       action: publish:github
       input:
-        description: This is ${{ parameters.name }}
-        repoUrl: ${{ parameters.repoUrl }}
-        defaultBranch: 'main'
+        description: This is ${{ parameters.component_name }}
+        repoUrl: github.com?owner=YuneZoft&repo=${{ parameters.component_name }}
+#        defaultBranch: 'main'
+        protectDefaultBranch: false
 
     - id: register
       name: Register
