Update CI/CD configuration and template visibility settings

--- a/python-flask-apps/template.yaml
+++ b/python-flask-apps/template.yaml
@@ -73,6 +73,7 @@ spec:
         repoUrl: github.com?owner=YuneZoft&repo=${{ parameters.component_name }}
 #        defaultBranch: 'main'
         protectDefaultBranch: false
+        repoVisibility: public
 
     - id: register
       name: Register
