--- a/python-flask-apps/template/.github/workflows/cicd.yaml
+++ b/python-flask-apps/template/.github/workflows/cicd.yaml
@@ -60,18 +60,25 @@ jobs:
         run: |
           sudo curl -sSLk -o /usr/local/bin/argocd https://argocd-server.argocd/download/argocd-linux-amd64
           sudo chmod +x /usr/local/bin/argocd 
+
           argocd login argocd-server.argocd \
             --insecure \
             --username ${{ '${{ vars.ARGOCD_USERNAME }}' }} \
             --password ${{ '${{ secrets.ARGOCD_PASSWORD }}' }}
+
           argocd repo add \
             https://github.com/YuneZoft/${{values.component_name}} \
             --project default \
             --name ${{values.component_name}}
+
           argocd app create ${{values.component_name}} \
             --repo https://github.com/YuneZoft/${{values.component_name}} 
             --path charts 
+            --revision master
             --dest-namespace ${{values.component_name}}-${{values.environment}} 
+            --values values-${{values.environment}}.yaml
             --dest-server https://kubernetes.default.svc
+            --sync-option CreateNamespace=true
+
           argocd app sync ${{values.component_name}}
 
