--- a/python-flask-apps/template/catalog-info.yaml
+++ b/python-flask-apps/template/catalog-info.yaml
@@ -7,7 +7,7 @@ metadata:
     - python
     - api
   annotations:
-    github.com/project-slug: JohnYunez/${{values.component_name}}
+    github.com/project-slug: YuneZoft/${{values.component_name}}
     backstage.io/techdocs-ref: dir:.
 spec:
   type: service
